--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
+html,
+body {
+  font-family: "Roboto Slab", serif; }
+
 .App {
   text-align: center; }
 
