--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,16 @@
+// Google Fonts
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
+
+// Font Variables
+$roboto-slab: 'Roboto Slab', serif;
+$open-sans: 'Open Sans', sans-serif;
+
+// Styles
+html,
+body {
+  font-family: $roboto-slab;
+}
+
 .App {
   text-align: center;
 }
