--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,9 @@ body {
 .App-intro {
   font-size: large; }
 
+.resetButton {
+  margin: 0px 10px; }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg); }
