--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,10 @@ body {
   font-size: large;
 }
 
+.resetButton {
+  margin: 0px 10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
