--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
-body {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #1e2326;
+  font-weight: 300;
+  line-height: 1.6;
+  background-color: #181c1f
 }
