--- a/src/styles/missionsFilter.css
+++ b/src/styles/missionsFilter.css
@@ -38,9 +38,11 @@ li a {
   color: #ccc;
 }
 
+.filter-active,
 li:hover,
+li:active,
 li:focus-within {
-  background: #3569A4;
+  background: #3569a4;
   cursor: pointer;
 }
 
