--- a/src/styles/missionsGrid.css
+++ b/src/styles/missionsGrid.css
@@ -15,6 +15,7 @@
 .mission {
   display: grid;
   background-color: #fff;
+  max-width: 60rem;
   grid-template-columns: repeat(2, 1fr);
   grid-row-gap: 3.5rem;
 }
