--- a/src/styles/missionModal.css
+++ b/src/styles/missionModal.css
@@ -1,6 +1,6 @@
 .mission__modal {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   grid-gap: 5rem;
 }
 
@@ -12,7 +12,6 @@
 .mission__modal_details {
   font-size: 1.5rem;
   align-self: center;
-  width: 25rem;
 }
 
 .mission__modal_title {
