--- a/src/styles/missionsGrid.css
+++ b/src/styles/missionsGrid.css
@@ -20,6 +20,14 @@
   grid-row-gap: 3.5rem;
 }
 
+.mission:hover,
+.mission:active,
+.mission:focus-within {
+  background-color: #fff;
+  border-color: #ccac55;
+  border-style: solid;
+}
+
 .mission__img {
   width: 100%;
   grid-row: 1 / 2;
@@ -54,6 +62,8 @@
   align-items: center;
   padding: 1.25rem;
   display: flex;
+  text-transform: none;
+  color: #3a3a3a;
 }
 
 .mission__cardDetailItem {
