--- a/src/components/Brewery/Brewery.css
+++ b/src/components/Brewery/Brewery.css
@@ -1,10 +1,10 @@
 .Post {
-    width: 250px;
+    width: 23%;
     padding: 16px;
     text-align: center;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
-    margin: 10px;
+    margin: 1%;
     box-sizing: border-box;
     cursor: pointer;
 }
@@ -14,7 +14,20 @@
     background-color: #C0DDF5;
 }
 
-.Author {
-    margin: 16px 0;
-    color: #ccc;
+@media (max-width: 1200px) {
+    .Post {
+        width: 31%;
+    }
+}
+
+@media (max-width: 900px) {
+    .Post {
+        width: 48%;
+    }
+}
+
+@media (max-width: 600px) {
+    .Post {
+        width: 100%
+    }
 }
