--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -1,41 +1,56 @@
-@import "../../styles/mixins";
+@import "../../assets/mixins";
 
 .Grid {
-  display: grid;
-  width: 100%;
-  padding: 20px 40px;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 0;
-  grid-row-gap: 10px;
-  justify-items: stretch;
-  align-items: stretch;
+  max-width: 100%;
+  margin: 50px auto;
 
-  @include sm {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-column-gap: 10px;
-  }
+  // prevent mouse selection
+  user-select: none;
 
   @include md {
-    padding: 20px 100px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    justify-items: stretch;
-    align-items: stretch;
+    max-width: 830px;
   }
 
-  @include lg {
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
+  &__CopiedMessage {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 20px;
+    z-index: 99;
+  }
+
+  &__Container {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 10px;
     justify-items: center;
     align-items: center;
-  }
 
-  img {
-    width: 200px;
-    height: 200px;
+    @include sm {
+      grid-template-columns: 200px 200px;
+      grid-template-rows: 1fr 1fr;
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
+      justify-items: center;
+      align-items: center;
+    }
+
+    @include md {
+      grid-template-columns: 200px 200px 200px;
+      grid-template-rows: 1fr 1fr 1fr;
+    }
+
+    @include lg {
+      grid-template-columns: 200px 200px 200px 200px;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
   }
 }
