--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,27 @@
-@import "./styles/main";
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "assets/main";
 
 body {
+  margin: 0;
+  background: $body-background;
   font-family: 'Krub', sans-serif;
+}
+
+.Error {
+  color: #C21F39;
+  text-align: center;
+  font-size: 25px;
+}
+
+.EmptyResults {
+  text-align: center;
+  font-size: 25px;
+}
+
+.BtnCloseModal {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: $white;
+  opacity: 1;
 }
